dev/envoy-docker.yaml
# >>>>>>>>>>>>>>>>>>>> Use This config for deploying in docker <<<<<<<<<<<<<<<<

# admin web panel
admin:
  access_log_path: /var/log/admin_logs
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: first-listener
      address:
        socket_address:
          address: 0.0.0.0
          # TODO: Need to figure out why sometimes it fails to listen on port `80`
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: lb/reverse-proxy # this is just a prefix for any stats logging.
                # For understaing routing.
                # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/http/http_routing#http-routing
                # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/route_matching
                # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#config-http-filters-router
                #https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/router/v3/router.proto#router
                request_timeout: 300s
                http_filters:
                  - name: envoy.filters.http.router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /var/log/access_logs
                route_config:
                  name: all
                  virtual_hosts:
                    - name: twitter
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: fe

  clusters:
    - name: fe
      connect_timeout: 1s
      # type: static
      type: strict_dns
      load_assignment:
        cluster_name: fe
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: 127.0.0.1
                      address: nginx
                      port_value: 7000
